module9/Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpserver
  namespace: cicd
  uid: 71b5fe3e-dd47-4c93-a947-6137541f9aa3
  resourceVersion: '104798015'
  generation: 3
  creationTimestamp: '2022-02-08T02:19:19Z'
  labels:
    app: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
        chart: httpserver-4.1.4
        release: httpserver
    spec:
      volumes:
        - name: httpserver-data
          persistentVolumeClaim:
            claimName: httpserver
      containers:
        - name: httpserver
          image: '172.22.96.80/lihaorong/httpserver:v1.0'
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: httpserver-data
              mountPath: /bitnami/httpserver
          livenessProbe:
            httpGet:
              path: /login
              port: http
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /login
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
    status:
      qosClass: Guaranteed
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
